--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -1,1 +1,19 @@
-<!--Alexandra Proxenia 17419237-->
+<!--Alexandra Proxenia, student_number 17419237-->
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css file to current html file-->
+</head>
+<body>
+<header>
+<ul>
+  <li><a href="intex.html">Home</a></li>
+  <li><a href="resume.html">Resume</a></li>
+  <li><a href="bio.html">Biography</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
+</header>
+
+<footer>
+</footer>
+</body>
+</html>
