--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -14,6 +14,10 @@
 </header>
 
 <footer>
+  <p>telephone number</p>
+  <p>email</p>
+  <p>facebook</p>
+  <p>maryio</p>
 </footer>
 </body>
 </html>
