--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -34,10 +34,11 @@
 
 
 <footer>
-  <p>telephone number</p>
-  <p>email</p>
-  <p>facebook</p>
-  <p>maryio</p>
+<ul2><li 2>telephone number</li 2>
+  <li 2>email</li 2>
+  <li 2>facebook</li 2>
+  <li 2>maryio</li 2>
+</ul2>
 </footer>
 </body>
 </html>
