--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--i want to insert css file to current html file-->
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 </head>
 <body>
 <header>
@@ -34,10 +34,10 @@
 
 
 <footer>
-<ul2><li 2>telephone number</li 2>
-  <li 2>email</li 2>
-  <li 2>facebook</li 2>
-  <li 2>maryio</li 2>
+<ul2><li>telephone number</li>
+  <li>email</li>
+  <li>facebook</li>
+  <li>maryio</li>
 </ul2>
 </footer>
 </body>
