insert new biofile in bio

--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
+<link rel="stylesheet" type="text/css" href="css/biofile.css"><!--insert css file to current html file-->
 </head>
 <body>
 <header>
