--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -1,5 +1,5 @@
 <!--Alexandra Proxenia, student_number 17419237-->
-<!DOCTYPE html>
+<!DOCTYPE html><!--html5-->
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/biofile.css"><!--insert css file to current html file-->
@@ -7,10 +7,10 @@
 <body>
 <header>
 <ul>
-  <li class="links"><a href="intex.html">Home</a></li>
-  <li class="links"><a href="resume.html">Resume</li>
-  <li class="links"><a href="bio.html">Biography</a></li>
-  <li class="links"><a href="contact.html">Contact</a></li>
+<li class="links"><a href="contact.html">Contact</a></li>
+<li class="links"><a href="bio.html">Biography</a></li>
+<li class="links"><a href="resume.html">Resume</a></li>
+<li class="links"><a href="intex.html">Home</a></li>
 </ul>
 </header>
 <h1>About Mary</h1>
@@ -34,11 +34,11 @@
 
 
 <footer>
-<ul2><li>telephone number</li>
-  <li>email</li>
-  <li>facebook</li>
-  <li>maryio</li>
-</ul2>
+  <ul1><li>00306921234567</li>
+    <li>mary@smith.gr</li>
+    <li>marysmithfb</li>
+    <li>marysmithgit</li>
+  </ul1>
 </footer>
 </body>
 </html>
