--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -2,15 +2,16 @@
 <!DOCTYPE html><!--html5-->
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/biofile.css"><!--insert css file to current html file-->
+<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
+<title>Biography</title>
 </head>
 <body>
 <header>
-<ul>
-<li class="links"><a href="contact.html">Contact</a></li>
-<li class="links"><a href="bio.html">Biography</a></li>
-<li class="links"><a href="resume.html">Resume</a></li>
-<li class="links"><a href="intex.html">Home</a></li>
+<ul class="a">
+<li><a href="contact.html">Contact</a></li>
+<li><a href="bio.html">Biography</a></li>
+<li><a href="resume.html">Resume</a></li>
+<li><a href="intex.html">Home</a></li>
 </ul>
 </header>
 <h1>About Mary</h1>
@@ -34,11 +35,11 @@
 
 
 <footer>
-  <ul1><li>00306921234567</li>
+  <ul class="b"><li>00306921234567</li>
     <li>mary@smith.gr</li>
     <li>marysmithfb</li>
     <li>marysmithgit</li>
-  </ul1>
+  </ul>
 </footer>
 </body>
 </html>
