--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 <title>Biography</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header>
@@ -16,15 +17,15 @@
 </header>
 <h1>About Mary</h1>
 <p>
- Mary worked on the computer with his father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them.<br> Finally she learn that computer science is the power of the magic.
+ Mary worked on the computer with his father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them.Finally she learn that computer science is the power of the magic.
 </p>
 <p>
-  She studies computer and she loves to solve problems improving a code. She is very interest to explore the net world and learn <br> new programming languages and news about the industry of mobiles phones and them applications.
+  She studies computer and she loves to solve problems improving a code. She is very interest to explore the net world and learn new programming languages and news about the industry of mobiles phones and them applications.
 </p>
 <p>
-  Sometimes people think about her that it is very difficult to understand her <br> because she speaks all the time about applications, programs, and game commands.
+  Sometimes people think about her that it is very difficult to understand her because she speaks all the time about applications, programs, and game commands.
 </p>
-<p> She works a lot and she works to a project in which people using mobile phone and <br> interactive with it learn what is their medical condition and if it is essential to meet a doctor.
+<p> She works a lot and she works to a project in which people using mobile phone and interactive with it learn what is their medical condition and if it is essential to meet a doctor.
 </p>
 <p>
   Finally, she loves to walk near the sea or take her coffee in a café store with the company of her laptop.</p>
@@ -32,21 +33,16 @@
 <p>
   I am a programmer, I know to use java, javascript, html, css and some other language too and I prefer to work to GitHub my projects, <br> since I can communicate with my colluages. I graduated from the University of Northampton, in which I studied computer science. I recently work in Medical company and we try to help old people using their mobile phones to save their life.
 </p>
-
-
 <footer>
   <h4>You can find me : </h4>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <ul class="c">
-  <li> <i class="material-icons">&#xe324;</i>00306921234567</li>
-  <li> <i style="font-size:20px" class="fa">&#xf003;</i> mary@smith.gr</li>
-  <li> <i style="font-size:24px" class="fa">&#xf082; </i> marysmithfb</li>
-  <li> <i style="font-size:20px" class="fa">&#xf092;</i> marysmithgit</li>
-  </ul>
+  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
 </footer>
 </body>
 </html>
