--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html><!--html5-->
 <html>
 <head>
+<h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 <title>Biography</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
