--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -18,7 +18,7 @@
 </header>
 <h1>About Mary</h1>
 <p>
- Mary worked on the computer with his father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them.Finally she learn that computer science is the power of the magic.
+ Mary worked on the computer with her father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them.Finally she learn that computer science is the power of the magic.
 </p>
 <p>
   She studies computer and she loves to solve problems improving a code. She is very interest to explore the net world and learn new programming languages and news about the industry of mobiles phones and them applications.
@@ -44,6 +44,7 @@
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 </body>
 </html>
