--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -5,16 +5,19 @@
 <h1>Mary Smith</h1>
 <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 <title>Biography</title>
+<!--for icons-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <header>
+<!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="resume.html">Resume</a></li>
 <li><a href="intex.html">Home</a></li>
 </ul>
+<!--end of ul with anchor-->
 </header>
 <h1>About Mary</h1>
 <p>
@@ -35,6 +38,7 @@
   I am a programmer, I know to use java, javascript, html, css and some other language too and I prefer to work to GitHub my projects, <br> since I can communicate with my colluages. I graduated from the University of Northampton, in which I studied computer science. I recently work in Medical company and we try to help old people using their mobile phones to save their life.
 </p>
 <footer>
+<!--icons and anchors-->
   <h4>You can find me : </h4>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,6 +48,7 @@
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
 </body>
