changes to header

--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -1,15 +1,16 @@
-<!--Alexandra Proxenia, student_number 17419237-->
 <!DOCTYPE html><!--html5-->
+<!--Alexandra Proxenia, student_number 17419237-->
 <html>
 <head>
-<h1>Mary Smith</h1>
-<link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
-<title>Biography</title>
-<!--for icons-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+  <!--for icons-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Biography</title>
+  <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
+  </head>
 <body>
 <header>
+  <h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
@@ -33,7 +34,7 @@
 </p>
 <p>
   Finally, she loves to walk near the sea or take her coffee in a café store with the company of her laptop.</p>
-<p><h3>But in real, who are you?</h3></p>
+<h3>But in real, who are you?</h3>
 <p>
   I am a programmer, I know to use java, javascript, html, css and some other language too and I prefer to work to GitHub my projects, <br> since I can communicate with my colluages. I graduated from the University of Northampton, in which I studied computer science. I recently work in Medical company and we try to help old people using their mobile phones to save their life.
 </p>
@@ -47,7 +48,7 @@
   <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
   <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
   <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p></ul>
+  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
