--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html><!--html5-->
-<!--Alexandra Proxenia, student_number 17419237-->
+<!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
   <!--for icons-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
   <meta charset="utf-8">
+  <!--google webfont API-->
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
   <title>Biography</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 </head>
@@ -41,14 +44,10 @@
 <footer>
 <!--icons and anchors-->
   <h4>You can find me : </h4>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <P> <i class="material-icons">&#xe324;</i> <a href="tel:00306912345678">00306912345678</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf003;</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
-  <p> <i style="font-size:24px" class="fa">&#xf082; </i> <a href="facebook:marysmithfb">marysmithfb</a></p>
-  <p> <i style="font-size:20px" class="fa">&#xf092;</i> <a href="github:marysmithgit">marysmithgit"</a></p>
+  <P> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></p>
+  <p> <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></p>
+  <p> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></p>
+  <p> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></p>
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
