--- a/csy1018/assign1/bio.html
+++ b/csy1018/assign1/bio.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 </head>
 <body>
+<!--header-->
 <header>
-  <h1>Mary Smith</h1>
+<h1>Mary Smith</h1>
 <!--ul with anchor-->
 <ul class="a">
 <li><a href="contact.html">Contact</a></li>
@@ -23,6 +24,7 @@
 </ul>
 <!--end of ul with anchor-->
 </header>
+<!--end of header-->
 <h1>About Mary</h1>
 <p>
  Mary worked on the computer with her father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them. Finally she learn that computer science is the power of the magic.
@@ -41,6 +43,7 @@
 <p>
   I am a programmer, I know to use java, javascript, html, css and some other language too and I prefer to work to GitHub my projects, <br> since I can communicate with my colluages. I graduated from the University of Northampton, in which I studied computer science. I recently work in Medical company and we try to help old people using their mobile phones to save their life.
 </p>
+<!--footer-->
 <footer>
 <!--icons and anchors-->
   <h4>You can find me : </h4>
@@ -51,5 +54,6 @@
   <!--copuright-->
   <p class="copuright">Copuright Mary Smith 2016</p>
 </footer>
+<!--end of footer-->
 </body>
 </html>
