--- a/csy1018-assign1/bio.html
+++ b/csy1018-assign1/bio.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet">
   <meta charset="utf-8">
-  <!--google webfont API-->
+    <!--google webfont API-->
   <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
   <title>Biography</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
@@ -16,12 +16,12 @@
 <header>
 <h1>Mary Smith</h1>
 <!--ul with anchor-->
-<nav> <ul class="a">
+<div class="rightsidenav"<nav> <ul class="a">
 <li><a href="contact.html">Contact</a></li>
 <li><a href="bio.html">Biography</a></li>
 <li><a href="cv.html">Cv</a></li>
 <li><a href="index.html">Home</a></li>
-</ul> </nav>
+</ul> </nav></div>
 <!--end of ul with anchor-->
 </header>
 <!--end of header-->
