--- a/csy1018-assign1/bio.html
+++ b/csy1018-assign1/bio.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <!--for icons-->
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet">
   <meta charset="utf-8">
@@ -14,7 +15,7 @@
 <body>
 <!--header-->
 <header>
- <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1>
+ <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1><!--mylogo-->
 <!--ul with anchor-->
 <div class="rightsidenav"<nav> <ul class="a">
 <li><a href="contact.html">Contact</a></li>
