--- a/csy1018-assign1/bio.html
+++ b/csy1018-assign1/bio.html
@@ -54,7 +54,7 @@
   <div class="flex-item"> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
   <div class="flex-item"> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></diV></diV>
   <!--copuright-->
-  <p class="copuright">Copuright Mary Smith 2016</p>
+  <p class="copyright">Copyright Mary Smith 2016</p>
 </footer>
 <!--end of footer-->
 </body>
