--- a/csy1018-assign1/bio.html
+++ b/csy1018-assign1/bio.html
@@ -2,13 +2,12 @@
 <!--Alexandra Proxenia,student_number 17419237-->
 <html>
 <head>
-  <!--for icons-->
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png"><!--favicon-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-  rel="stylesheet">
+  rel="stylesheet">  <!--for icons-->
   <meta charset="utf-8">
     <!--google webfont API-->
-  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet"><!--the font which is used-->
   <title>Biography</title>
   <link rel="stylesheet" type="text/css" href="css/file.css"><!--insert css file to current html file-->
 </head>
@@ -16,17 +15,17 @@
 <!--header-->
 <header>
  <h1><a href="index.html"><img src="images/mylogo.jpg" alt="logo"></a>Mary Smith</h1><!--mylogo-->
-<!--ul with anchor-->
-<div class="rightsidenav"<nav> <ul class="a">
-<li><a href="contact.html">Contact</a></li>
-<li><a href="bio.html">Biography</a></li>
-<li><a href="cv.html">Cv</a></li>
-<li><a href="index.html">Home</a></li>
-</ul> </nav></div>
-<!--end of ul with anchor-->
+<!--navbar, ul with anchor-->
+ <nav> <ul class="a">
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="bio.html">Biography</a></li>
+  <li><a href="cv.html">Cv</a></li>
+  <li><a href="index.html">Home</a></li>
+ </ul> </nav>
+<!--end of navbar, ul with anchor-->
 </header>
 <!--end of header-->
-<h1>About Mary</h1>
+<h1>About Mary</h1><!--tittle-->
 <p>
  Mary worked on the computer with her father when she was young, she thought that the computer world was magic and people talk to machines and the machines respond to them. Finally she learn that computer science is the power of the magic.
 </p>
@@ -46,16 +45,15 @@
 </p>
 <!--footer-->
 <footer>
-<!--icons and anchors-->
-  <h4>You can find me : </h4>
-  <div class="flex-container">
-  <div class="flex-item"> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div>
-  <div class="flex-item">  <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div>
-  <div class="flex-item"> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div>
-  <div class="flex-item"> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></diV></diV>
-  <!--copuright-->
+  <h4>You can find me : </h4><!--title of footer-->
+  <div class="flex-container"><!--the flexbox class whitch contains the flex-item classes--><!--icons and anchors-->
+  <div class="flex-item"> <i class="material-icons">stay_current_portrait</i> <a href="tel:00306912345678">00306912345678</a></div><!--here is a mobile icon and an anchor,we can call this number for further informations-it is not real-->
+  <div class="flex-item">  <i class="material-icons">email</i> <a href="mailto:mary@smith">mary@smith.gr</a></div><!--here is an envelope icon and an anchor with email address which we can sen our mails-it is not real-->
+  <div class="flex-item"> <i class="material-icons">face</i> <a href="facebook:marysmithfb">marysmithfb</a></div><!--here is a face icon for facebook contact and the anchor address for facebook-it is not real-->
+  <div class="flex-item"> <i class="material-icons">cloud_queue</i> <a href="github:marysmithgit">marysmithgit</a></diV></diV><!--here is a cloud icon for git which is anchor and we can use to contact with mary-it is not real-->
+  <!--copuright class-->
   <p class="copyright">Copyright Mary Smith 2016</p>
 </footer>
 <!--end of footer-->
-</body>
+</body><!--end of boby-->
 </html>
